--- a/exbasic.sty
+++ b/exbasic.sty
@@ -15,3 +15,10 @@
     \hspace{-0.12cm}\leavevmode\marginpar[\hfill\parnum]{\parnum}%
 }
 
+% -----------------------------------
+% Klassifizierung des Dokuments
+% -----------------------------------
+\newcommand{\theclassified}{}
+\newcommand{\classified}[1]{\renewcommand{\theclassified}{#1}}
+\newcommand{\classcolor}{red}
+
